some abjad values updated

--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <title>Title</title>
 </head>
 <body>
+<H3>PLEASE CHANGE KEYBOARD INPUT TO URDU</H3>
 <input  type="text" id="key">
-<h1 id="counter"></h1>
+<h1 id="counter">0</h1>
+<hr>
+<h3>for now only single urdu values working :)</h3>
+<h4>you have to add right <em>ABJAD</em> values</h4>
+<hr>
 <script src="app.js"></script>
 </body>
 </html>
