--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
 </head>
 <body>
 <H3>PLEASE CHANGE KEYBOARD INPUT TO URDU</H3>
-<input  type="text" id="key">
+<input type="text" id="key">
 <h1 id="counter">0</h1>
 <hr>
-<h3>for now only single urdu values working :)</h3>
-<h4>you have to add right <em>ABJAD</em> values</h4>
+<h4>Caution : in development mode. please report if you found any <em>error</em> in values</h4>
 <hr>
 <script src="app.js"></script>
 </body>
